--- a/index.html
+++ b/index.html
@@ -17,43 +17,55 @@
             <p>Beats UK</p>
           </figure>
         </a>
-        <a href="https://emmanuelojiji.github.io/nosignalradio/" target="_blank">
-        <figure class="folder-wrap">
-          <img src="images/folder.png" />
-          <p>No Signal</p>
-        </figure>
+        <a
+          href="https://emmanuelojiji.github.io/nosignalradio/"
+          target="_blank"
+        >
+          <figure class="folder-wrap">
+            <img src="images/folder.png" />
+            <p>No Signal</p>
+          </figure>
         </a>
         <a href="https://emmanuelojiji.github.io/nike/" target="_blank">
-        <figure class="folder-wrap">
-          <img src="images/folder.png" />
-          <p>Nike</p>
-        </figure>
+          <figure class="folder-wrap">
+            <img src="images/folder.png" />
+            <p>Nike</p>
+          </figure>
         </a>
-
+        <a href="https://emmanuelojiji.github.io/oddstudio/" target="_blank">
         <figure class="folder-wrap">
           <img src="images/folder.png" />
           <p>ODD Studio</p>
         </figure>
+        </a>
 
+        <a href="https://romantic-cori-8546e9.netlify.app/" target="_blank">
         <figure class="folder-wrap">
           <img src="images/folder.png" />
           <p>Spotify Study</p>
         </figure>
+      </a>
 
+      <a href="https://emmanuelojiji.github.io/tribenamedathari/" target="_blank">
         <figure class="folder-wrap">
           <img src="images/folder.png" />
           <p>Tribe Named Athari</p>
         </figure>
+      </a>
 
+      <a href="https://emmanuelojiji.github.io/creps2africa/" target="_blank">
         <figure class="folder-wrap">
           <img src="images/folder.png" />
           <p>Creps 2 Africa</p>
         </figure>
+      </a>
 
+      <a href="https://emmanuelojiji.github.io/govuk/" target="_blank">
         <figure class="folder-wrap">
           <img src="images/folder.png" />
           <p>GOV UK</p>
         </figure>
+        </a>
 
         <aside class="menu"></aside>
       </main>
@@ -63,19 +75,25 @@
           <img src="images/windows-logo.svg" class="windows-icon" />
         </figure>
 
-        <input type="text" placeholder="Type here to search"/>
+        <input type="text" placeholder="Type here to search" />
 
-        <figure class="mail-icon-wrap icon-wrap">
-          <img src="images/mail.png" class="taskbar-icon" />
-        </figure>
+        <a href="mailto:someone@yoursite.com?subject=New Enquiry">
+          <figure class="mail-icon-wrap icon-wrap">
+            <img src="images/mail.png" class="taskbar-icon" />
+          </figure>
+        </a>
 
-        <figure class="mail-icon-wrap icon-wrap">
-          <img src="images/github.png" class="taskbar-icon" />
-        </figure>
+        <a href="https://github.com/emmanuelojiji/" target="_blank">
+          <figure class="mail-icon-wrap icon-wrap">
+            <img src="images/github.png" class="taskbar-icon" />
+          </figure>
+        </a>
 
-        <figure class="linkedin-icon-wrap icon-wrap">
-          <img src="images/linkedin.png" class="taskbar-icon" />
-        </figure>
+        <a href="https://www.linkedin.com/in/emmanuelojiji/" target="_blank">
+          <figure class="linkedin-icon-wrap icon-wrap">
+            <img src="images/linkedin.png" class="taskbar-icon" />
+          </figure>
+        </a>
       </div>
     </div>
   </body>
