--- a/index.html
+++ b/index.html
@@ -1,100 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style/style.css" />
-    <script src="script.js"></script>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emmanuel Ojiji</title>
-  </head>
-  <body>
-    <div class="body-wrap">
-      <main>
-        <a href="https://emmanuelojiji.github.io/beatsuk/" target="_blank">
-          <figure class="folder-wrap">
-            <img src="images/folder.png" />
-            <p>Beats UK</p>
-          </figure>
-        </a>
-        <a
-          href="https://emmanuelojiji.github.io/nosignalradio/"
-          target="_blank"
-        >
-          <figure class="folder-wrap">
-            <img src="images/folder.png" />
-            <p>No Signal</p>
-          </figure>
-        </a>
-        <a href="https://emmanuelojiji.github.io/nike/" target="_blank">
-          <figure class="folder-wrap">
-            <img src="images/folder.png" />
-            <p>Nike</p>
-          </figure>
-        </a>
-        <a href="https://emmanuelojiji.github.io/oddstudio/" target="_blank">
-        <figure class="folder-wrap">
-          <img src="images/folder.png" />
-          <p>ODD Studio</p>
+    <link rel="stylesheet" href="style/index.css">
+</head>
+<body>
+    <main>
+        <div class="main-wrap">
+        <figure>
+            <img src="/images/user-icon.png">
         </figure>
-        </a>
-
-        <a href="https://romantic-cori-8546e9.netlify.app/" target="_blank">
-        <figure class="folder-wrap">
-          <img src="images/folder.png" />
-          <p>Spotify Study</p>
-        </figure>
-      </a>
-
-      <a href="https://emmanuelojiji.github.io/tribenamedathari/" target="_blank">
-        <figure class="folder-wrap">
-          <img src="images/folder.png" />
-          <p>Tribe Named Athari</p>
-        </figure>
-      </a>
-
-      <a href="https://emmanuelojiji.github.io/creps2africa/" target="_blank">
-        <figure class="folder-wrap">
-          <img src="images/folder.png" />
-          <p>Creps 2 Africa</p>
-        </figure>
-      </a>
-
-      <a href="https://emmanuelojiji.github.io/govuk/" target="_blank">
-        <figure class="folder-wrap">
-          <img src="images/folder.png" />
-          <p>GOV UK</p>
-        </figure>
-        </a>
-
-        <aside class="menu"></aside>
-      </main>
-
-      <div class="taskbar">
-        <figure class="windows-icon-wrap icon-wrap">
-          <img src="images/windows-logo.svg" class="windows-icon" />
-        </figure>
-
-        <input type="text" placeholder="Type here to search" />
-
-        <a href="mailto:someone@yoursite.com?subject=New Enquiry">
-          <figure class="mail-icon-wrap icon-wrap">
-            <img src="images/mail.png" class="taskbar-icon" />
-          </figure>
-        </a>
-
-        <a href="https://github.com/emmanuelojiji/" target="_blank">
-          <figure class="mail-icon-wrap icon-wrap">
-            <img src="images/github.png" class="taskbar-icon" />
-          </figure>
-        </a>
-
-        <a href="https://www.linkedin.com/in/emmanuelojiji/" target="_blank">
-          <figure class="linkedin-icon-wrap icon-wrap">
-            <img src="images/linkedin.png" class="taskbar-icon" />
-          </figure>
-        </a>
-      </div>
+        <h1>Emmanuel</h1>
+        <a href="desktop.html">Sign in</a>
     </div>
-  </body>
+    </main>
+</body>
 </html>
