--- a/desktop.html
+++ b/desktop.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="/style/desktop.css" />
     <script src="script.js"></script>
     <title>Emmanuel Ojiji</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="body-wrap">
