--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <figure>
             <img src="/images/user-icon.png">
         </figure>
-        <h1>Emmanuel</h1>
+        <h1>Emmanuel Ojiji</h1>
         <a href="desktop.html">Sign in</a>
     </div>
     </main>
