--- a/desktop.html
+++ b/desktop.html
@@ -8,70 +8,102 @@
     <script src="script.js"></script>
     <title>Emmanuel Ojiji</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="body-wrap">
       <main>
-        <a href="https://emmanuelojiji.github.io/beatsuk/" target="_blank">
-          <figure class="folder-wrap">
-            <img src="images/folder.png" />
+        <div class="folder-wrap">
+          <a
+            class="folder-text-wrap"
+            data-website-link="https://emmanuelojiji.github.io/beatsuk/"
+          >
+            <figure class="image-wrap">
+              <img src="images/folder.png" />
+            </figure>
             <p>Beats UK</p>
-          </figure>
-        </a>
-        <a
-          href="https://emmanuelojiji.github.io/nosignalradio/"
-          target="_blank"
-        >
-          <figure class="folder-wrap">
-            <img src="images/folder.png" />
+          </a>
+          <a
+            class="folder-text-wrap"
+            data-website-link="https://emmanuelojiji.github.io/nosignalradio/"
+          >
+            <figure class="image-wrap">
+              <img src="images/folder.png" />
+            </figure>
             <p>No Signal</p>
-          </figure>
-        </a>
-        <a href="https://emmanuelojiji.github.io/nike/" target="_blank">
-          <figure class="folder-wrap">
-            <img src="images/folder.png" />
+          </a>
+          <a class="folder-text-wrap" data-website-link="https://emmanuelojiji.github.io/nike/">
+            <figure class="image-wrap">
+              <img src="images/folder.png" />
+            </figure>
             <p>Nike</p>
-          </figure>
-        </a>
-        <a href="https://emmanuelojiji.github.io/oddstudio/" target="_blank">
-        <figure class="folder-wrap">
-          <img src="images/folder.png" />
-          <p>ODD Studio</p>
-        </figure>
-        </a>
+          </a>
+          <a class="folder-text-wrap" data-website-link="https://emmanuelojiji.github.io/oddstudio/">
+            <figure class="image-wrap">
+              <img src="images/folder.png" />
+            </figure>
+            <p>ODD Studio</p>
+          </a>
 
-        <a href="https://romantic-cori-8546e9.netlify.app/" target="_blank">
-        <figure class="folder-wrap">
-          <img src="images/folder.png" />
-          <p>Spotify Study</p>
-        </figure>
-      </a>
+          <a class="folder-text-wrap" data-website-link="https://romantic-cori-8546e9.netlify.app/">
+            <figure class="image-wrap">
+              <img src="images/folder.png" />
+            </figure>
+            <p>Spotify <br />Study</p>
+          </a>
 
-      <a href="https://emmanuelojiji.github.io/tribenamedathari/" target="_blank">
-        <figure class="folder-wrap">
-          <img src="images/folder.png" />
-          <p>Tribe Named Athari</p>
-        </figure>
-      </a>
+          <a class="folder-text-wrap" data-website-link="https://emmanuelojiji.github.io/tribenamedathari/">
+            <figure class="image-wrap">
+              <img src="images/folder.png" />
+            </figure>
+            <p>Tribe Named Athari</p>
+          </a>
 
-      <a href="https://emmanuelojiji.github.io/creps2africa/" target="_blank">
-        <figure class="folder-wrap">
-          <img src="images/folder.png" />
-          <p>Creps 2 Africa</p>
-        </figure>
-      </a>
+          <a class="folder-text-wrap" data-website-link="https://emmanuelojiji.github.io/creps2africa/">
+            <figure class="image-wrap">
+              <img src="images/folder.png" />
+            </figure>
+            <p>Creps 2 Africa</p>
+          </a>
 
-      <a href="https://emmanuelojiji.github.io/govuk/" target="_blank">
-        <figure class="folder-wrap">
-          <img src="images/folder.png" />
-          <p>GOV UK</p>
-        </figure>
-        </a>
+          <a class="folder-text-wrap" data-website-link="https://emmanuelojiji.github.io/govuk/">
+            <figure class="image-wrap">
+              <img src="images/folder.png" />
+            </figure>
+            <p>GOV UK</p>
+          </a>
+
+          <a class="folder-text-wrap">
+            <figure class="image-wrap">
+              <img src="images/notepad.png" />
+            </figure>
+            <p>About me</p>
+          </a>
+
+          <a class="folder-text-wrap">
+            <figure class="image-wrap">
+              <img src="images/word.png" />
+            </figure>
+            <p>My CV</p>
+          </a>
+        </div>
 
         <aside class="menu"></aside>
+
+        <div class="browser">
+          <header>
+            <p class="close">close</p>
+            <img src="/images/chrome.png">
+          </header>
+
+          <iframe title="W3Schools Free Online Web Tutorials" class="iframe">
+          </iframe>
+        </div>
       </main>
 
       <div class="taskbar">
@@ -98,6 +130,13 @@
             <img src="images/linkedin.png" class="taskbar-icon" />
           </figure>
         </a>
+
+        <a class="chrome">
+          <figure class="linkedin-icon-wrap icon-wrap">
+            <img src="images/chrome.png" class="taskbar-icon" />
+          </figure>
+        </a>
+
       </div>
     </div>
   </body>
