--- a/desktop.html
+++ b/desktop.html
@@ -20,7 +20,7 @@
       <main>
         <div class="folder-wrap">
           <a
-            class="folder-text-wrap"
+            class="folder-text-wrap file-folder"
             data-website-link="https://emmanuelojiji.github.io/beatsuk/"
           >
             <figure class="image-wrap">
@@ -29,7 +29,7 @@
             <p>Beats UK</p>
           </a>
           <a
-            class="folder-text-wrap"
+            class="folder-text-wrap file-folder"
             data-website-link="https://emmanuelojiji.github.io/nosignalradio/"
           >
             <figure class="image-wrap">
@@ -37,55 +37,73 @@
             </figure>
             <p>No Signal</p>
           </a>
-          <a class="folder-text-wrap" data-website-link="https://emmanuelojiji.github.io/nike/">
+          <a
+            class="folder-text-wrap file-folder"
+            data-website-link="https://emmanuelojiji.github.io/nike/"
+          >
             <figure class="image-wrap">
               <img src="images/folder.png" />
             </figure>
             <p>Nike</p>
           </a>
-          <a class="folder-text-wrap" data-website-link="https://emmanuelojiji.github.io/oddstudio/">
+          <a
+            class="folder-text-wrap file-folder"
+            data-website-link="https://emmanuelojiji.github.io/oddstudio/"
+          >
             <figure class="image-wrap">
               <img src="images/folder.png" />
             </figure>
             <p>ODD Studio</p>
           </a>
 
-          <a class="folder-text-wrap" data-website-link="https://romantic-cori-8546e9.netlify.app/">
+          <a
+            class="folder-text-wrap file-folder"
+            data-website-link="https://romantic-cori-8546e9.netlify.app/"
+          >
             <figure class="image-wrap">
               <img src="images/folder.png" />
             </figure>
             <p>Spotify <br />Study</p>
           </a>
 
-          <a class="folder-text-wrap" data-website-link="https://emmanuelojiji.github.io/tribenamedathari/">
+          <a
+            class="folder-text-wrap file-folder"
+            data-website-link="https://emmanuelojiji.github.io/tribenamedathari/"
+          >
             <figure class="image-wrap">
               <img src="images/folder.png" />
             </figure>
             <p>Tribe Named Athari</p>
           </a>
 
-          <a class="folder-text-wrap" data-website-link="https://emmanuelojiji.github.io/creps2africa/">
+          <a
+            class="folder-text-wrap file-folder"
+            data-website-link="https://emmanuelojiji.github.io/creps2africa/"
+          >
             <figure class="image-wrap">
               <img src="images/folder.png" />
             </figure>
             <p>Creps 2 Africa</p>
           </a>
 
-          <a class="folder-text-wrap" data-website-link="https://emmanuelojiji.github.io/govuk/">
+          <a
+            class="folder-text-wrap file-folder"
+            data-website-link="https://emmanuelojiji.github.io/govuk/"
+          >
             <figure class="image-wrap">
               <img src="images/folder.png" />
             </figure>
             <p>GOV UK</p>
           </a>
 
-          <a class="folder-text-wrap">
+          <a class="folder-text-wrap file-folder">
             <figure class="image-wrap">
               <img src="images/notepad.png" />
             </figure>
             <p>About me</p>
           </a>
 
-          <a class="folder-text-wrap">
+          <a class="folder-text-wrap file-folder"  data-website-link="/cv.pdf">
             <figure class="image-wrap">
               <img src="images/word.png" />
             </figure>
@@ -93,12 +111,115 @@
           </a>
         </div>
 
-        <aside class="menu"></aside>
+        <aside class="start">
+          <div class="start-menu">
+            <figure class="start-menu-icon-wrap">
+              <img src="/images/power.png" />
+            </figure>
+          </div>
+
+          <div class="start-folders">
+            <h5>Recently added</h5>
+
+            <div class="start-folder-wrap file-folder" data-website-link="https://emmanuelojiji.github.io/beatsuk/">
+              <figure>
+                <img src="/images/folder.png" />
+              </figure>
+              <p>Spotify Study</p>
+            </div>
+            <div class="start-folder-wrap file-folder" data-website-link="https://emmanuelojiji.github.io/tribenamedathari/">
+              <figure>
+                <img src="/images/folder.png" />
+              </figure>
+              <p>Tribe Named Athari</p>
+            </div>
+
+            <h5>Projects</h5>
+
+            <div class="start-folder-wrap file-folder" data-website-link="https://emmanuelojiji.github.io/beatsuk/">
+              <figure>
+                <img src="/images/folder.png" />
+              </figure>
+              <p>Beats</p>
+            </div>
+
+            <div class="start-folder-wrap file-folder" data-website-link="https://emmanuelojiji.github.io/creps2africa/">
+              <figure>
+                <img src="/images/folder.png" />
+              </figure>
+              <p>Creps 2 Africa</p>
+            </div>
+
+            <div class="start-folder-wrap file-folder" data-website-link="https://emmanuelojiji.github.io/govuk/">
+              <figure>
+                <img src="/images/folder.png" />
+              </figure>
+              <p>GOV UK</p>
+            </div>
+
+            <div class="start-folder-wrap file-folder" data-website-link="https://emmanuelojiji.github.io/nike/">
+              <figure>
+                <img src="/images/folder.png" />
+              </figure>
+              <p>Nike</p>
+            </div>
+
+            <div class="start-folder-wrap file-folder" data-website-link="https://emmanuelojiji.github.io/nosignal/">
+              <figure>
+                <img src="/images/folder.png" />
+              </figure>
+              <p>No Signal</p>
+            </div>
+
+            <div class="start-folder-wrap file-folder" data-website-link="https://emmanuelojiji.github.io/oddstudio/">
+              <figure>
+                <img src="/images/folder.png" />
+              </figure>
+              <p>ODD Studio</p>
+            </div>
+
+            <div class="start-folder-wrap file-folder" data-website-link="https://emmanuelojiji.github.io/sppotifystudy/">
+              <figure>
+                <img src="/images/folder.png" />
+              </figure>
+              <p>Spotify Study</p>
+            </div>
+
+            <div class="start-folder-wrap file-folder" data-website-link="https://emmanuelojiji.github.io/tribenamedathari/">
+              <figure>
+                <img src="/images/folder.png" />
+              </figure>
+              <p>Tribe Named Athari</p>
+            </div>
+
+            <h5>Files</h5>
+
+            <div class="start-folder-wrap file-folder">
+              <figure>
+                <img src="/images/notepad.png" />
+              </figure>
+              <p>About Me</p>
+            </div>
+
+            <div class="start-folder-wrap file-folder" data-website-link="/cv.pdf/">
+              <figure>
+                <img src="/images/word.png" />
+              </figure>
+              <p>My CV</p>
+            </div>
+          </div>
+
+          <div class="coming-soon">
+            <h5>Coming soon</h5>
+
+            <div class="square"></div>
+          </div>
+        </aside>
 
         <div class="browser">
           <header>
             <p class="close">close</p>
-            <img src="/images/chrome.png">
+            <img src="/images/chrome.png" />
           </header>
 
           <iframe title="W3Schools Free Online Web Tutorials" class="iframe">
@@ -136,7 +257,6 @@
             <img src="images/chrome.png" class="taskbar-icon" />
           </figure>
         </a>
-
       </div>
     </div>
   </body>
