--- a/desktop.html
+++ b/desktop.html
@@ -103,7 +103,7 @@
             <p>About me</p>
           </a>
 
-          <a class="folder-text-wrap file-folder"  data-website-link="/cv.pdf">
+          <a class="folder-text-wrap file-folder" data-website-link="/cv.pdf">
             <figure class="image-wrap">
               <img src="images/word.png" />
             </figure>
@@ -121,13 +121,19 @@
           <div class="start-folders">
             <h5>Recently added</h5>
 
-            <div class="start-folder-wrap file-folder" data-website-link="https://emmanuelojiji.github.io/beatsuk/">
+            <div
+              class="start-folder-wrap file-folder"
+              data-website-link="https://emmanuelojiji.github.io/beatsuk/"
+            >
               <figure>
                 <img src="/images/folder.png" />
               </figure>
               <p>Spotify Study</p>
             </div>
-            <div class="start-folder-wrap file-folder" data-website-link="https://emmanuelojiji.github.io/tribenamedathari/">
+            <div
+              class="start-folder-wrap file-folder"
+              data-website-link="https://emmanuelojiji.github.io/tribenamedathari/"
+            >
               <figure>
                 <img src="/images/folder.png" />
               </figure>
@@ -136,56 +142,80 @@
 
             <h5>Projects</h5>
 
-            <div class="start-folder-wrap file-folder" data-website-link="https://emmanuelojiji.github.io/beatsuk/">
+            <div
+              class="start-folder-wrap file-folder"
+              data-website-link="https://emmanuelojiji.github.io/beatsuk/"
+            >
               <figure>
                 <img src="/images/folder.png" />
               </figure>
               <p>Beats</p>
             </div>
 
-            <div class="start-folder-wrap file-folder" data-website-link="https://emmanuelojiji.github.io/creps2africa/">
+            <div
+              class="start-folder-wrap file-folder"
+              data-website-link="https://emmanuelojiji.github.io/creps2africa/"
+            >
               <figure>
                 <img src="/images/folder.png" />
               </figure>
               <p>Creps 2 Africa</p>
             </div>
 
-            <div class="start-folder-wrap file-folder" data-website-link="https://emmanuelojiji.github.io/govuk/">
+            <div
+              class="start-folder-wrap file-folder"
+              data-website-link="https://emmanuelojiji.github.io/govuk/"
+            >
               <figure>
                 <img src="/images/folder.png" />
               </figure>
               <p>GOV UK</p>
             </div>
 
-            <div class="start-folder-wrap file-folder" data-website-link="https://emmanuelojiji.github.io/nike/">
+            <div
+              class="start-folder-wrap file-folder"
+              data-website-link="https://emmanuelojiji.github.io/nike/"
+            >
               <figure>
                 <img src="/images/folder.png" />
               </figure>
               <p>Nike</p>
             </div>
 
-            <div class="start-folder-wrap file-folder" data-website-link="https://emmanuelojiji.github.io/nosignal/">
+            <div
+              class="start-folder-wrap file-folder"
+              data-website-link="https://emmanuelojiji.github.io/nosignal/"
+            >
               <figure>
                 <img src="/images/folder.png" />
               </figure>
               <p>No Signal</p>
             </div>
 
-            <div class="start-folder-wrap file-folder" data-website-link="https://emmanuelojiji.github.io/oddstudio/">
+            <div
+              class="start-folder-wrap file-folder"
+              data-website-link="https://emmanuelojiji.github.io/oddstudio/"
+            >
               <figure>
                 <img src="/images/folder.png" />
               </figure>
               <p>ODD Studio</p>
             </div>
 
-            <div class="start-folder-wrap file-folder" data-website-link="https://emmanuelojiji.github.io/sppotifystudy/">
+            <div
+              class="start-folder-wrap file-folder"
+              data-website-link="https://emmanuelojiji.github.io/sppotifystudy/"
+            >
               <figure>
                 <img src="/images/folder.png" />
               </figure>
               <p>Spotify Study</p>
             </div>
 
-            <div class="start-folder-wrap file-folder" data-website-link="https://emmanuelojiji.github.io/tribenamedathari/">
+            <div
+              class="start-folder-wrap file-folder"
+              data-website-link="https://emmanuelojiji.github.io/tribenamedathari/"
+            >
               <figure>
                 <img src="/images/folder.png" />
               </figure>
@@ -201,7 +231,10 @@
               <p>About Me</p>
             </div>
 
-            <div class="start-folder-wrap file-folder" data-website-link="/cv.pdf/">
+            <div
+              class="start-folder-wrap file-folder"
+              data-website-link="/cv.pdf/"
+            >
               <figure>
                 <img src="/images/word.png" />
               </figure>
@@ -232,7 +265,11 @@
           <img src="images/windows-logo.svg" class="windows-icon" />
         </figure>
 
-        <input type="text" placeholder="Type here to search" />
+        <div class="search-wrap">
+          <input type="text" placeholder="Type here to search" /><img
+            src="/images/search.png"
+          />
+        </div>
 
         <a href="mailto:someone@yoursite.com?subject=New Enquiry">
           <figure class="mail-icon-wrap icon-wrap">
