--- a/desktop.html
+++ b/desktop.html
@@ -103,7 +103,7 @@
             <p>About me</p>
           </a>
 
-          <a class="folder-text-wrap file-folder" data-website-link="/cv.pdf">
+          <a href="/cv.pdf" class="folder-text-wrap" target="_blank">
             <figure class="image-wrap">
               <img src="images/word.png" />
             </figure>
