--- a/desktop.html
+++ b/desktop.html
@@ -242,11 +242,11 @@
             </div>
           </div>
 
-          <div class="coming-soon">
+          <!--<div class="coming-soon">
             <h5>Coming soon</h5>
 
             <div class="square"></div>
-          </div>
+          </div>-->
         </aside>
 
         <div class="browser">
