--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
         <div class="folder-wrap">
           <a
             class="folder-text-wrap file-folder"
+            href="https://emmanuelojiji.github.io/nandos/" target="_blank"
+          >
+            <figure class="image-wrap">
+              <img src="images/folder.png" />
+            </figure>
+            <p>Nando's</p>
+          </a>
+
+          <a
+            class="folder-text-wrap file-folder"
             href="https://emmanuelojiji.github.io/beatsuk/" target="_blank"
           >
             <figure class="image-wrap">
