--- a/index.html
+++ b/index.html
@@ -1,310 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style/index.css" />
-    <script src="script.js"></script>
-    <title>Emmanuel O</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <div class="body-wrap">
-      <main>
-        <div class="folder-wrap">
-          <a
-            class="folder-text-wrap file-folder"
-            href="https://emmanuelojiji.github.io/nandos/" target="_blank"
-          >
-            <figure class="image-wrap">
-              <img src="images/folder.png" />
-            </figure>
-            <p>Nando's</p>
-          </a>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Famous UI</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+</head>
 
-          <a
-            class="folder-text-wrap file-folder"
-            href="https://emmanuelojiji.github.io/beatsuk/" target="_blank"
-          >
-            <figure class="image-wrap">
-              <img src="images/folder.png" />
-            </figure>
-            <p>Beats UK</p>
-          </a>
-          <a
-            class="folder-text-wrap file-folder"
-            href="https://emmanuelojiji.github.io/nosignalradio/" target="_blank"
-          >
-            <figure class="image-wrap">
-              <img src="images/folder.png" />
-            </figure>
-            <p>No Signal</p>
-          </a>
-          <a
-            class="folder-text-wrap file-folder"
-            href="https://emmanuelojiji.github.io/nike/" target="_blank"
-          >
-            <figure class="image-wrap">
-              <img src="images/folder.png" />
-            </figure>
-            <p>Nike</p>
-          </a>
-          <a
-            class="folder-text-wrap file-folder"
-            href="https://emmanuelojiji.github.io/oddstudio/" target="_blank"
-          >
-            <figure class="image-wrap">
-              <img src="images/folder.png" />
-            </figure>
-            <p>ODD Studio</p>
-          </a>
+<body>
 
-          <a
-            class="folder-text-wrap file-folder"
-            href="https://romantic-cori-8546e9.netlify.app/" target="_blank"
-          >
-            <figure class="image-wrap">
-              <img src="images/folder.png" />
-            </figure>
-            <p>Spotify <br />Study</p>
-          </a>
+    <header>
+        <div class="header-wrap page-container">
+            <span class="logo">Emmanuel Ojiji</span>
 
-          <a
-            class="folder-text-wrap file-folder"
-            href="https://emmanuelojiji.github.io/tribenamedathari/" target="_blank"
-          >
-            <figure class="image-wrap">
-              <img src="images/folder.png" />
-            </figure>
-            <p>Tribe Named Athari</p>
-          </a>
+            <nav>
+               
+                <a href="#explore">Projects</a>
+                <a href="mailto:ojijimanuel@hotmail.com">Contact</a>
+            </nav>
 
-          <a
-            class="folder-text-wrap file-folder"
-            href="https://emmanuelojiji.github.io/creps2africa/" target="_blank"
-          >
-            <figure class="image-wrap">
-              <img src="images/folder.png" />
-            </figure>
-            <p>Creps 2 Africa</p>
-          </a>
-
-          <a
-            class="folder-text-wrap file-folder"
-            href="https://emmanuelojiji.github.io/govuk/" target="_blank"
-          >
-            <figure class="image-wrap">
-              <img src="images/folder.png" />
-            </figure>
-            <p>GOV UK</p>
-          </a>
-
-          <a class="folder-text-wrap file-folder">
-            <figure class="image-wrap">
-              <img src="images/notepad.png" />
-            </figure>
-            <p>About me</p>
-          </a>
-
-          <a href="/cv.pdf" class="folder-text-wrap" target="_blank">
-            <figure class="image-wrap">
-              <img src="images/word.png" />
-            </figure>
-            <p>My CV</p>
-          </a>
+          
         </div>
+    </header>
 
-        <aside class="start">
-          <div class="start-menu">
-            <figure class="start-menu-icon-wrap">
-              <img src="/images/power.png" />
-            </figure>
-          </div>
-
-          <div class="start-folders">
-            <h5>Recently added</h5>
-
-            <div
-              class="start-folder-wrap file-folder"
-              data-website-link="https://emmanuelojiji.github.io/beatsuk/"
-            >
-              <figure>
-                <img src="/images/folder.png" />
-              </figure>
-              <p>Spotify Study</p>
-            </div>
-            <div
-              class="start-folder-wrap file-folder"
-              data-website-link="https://emmanuelojiji.github.io/tribenamedathari/"
-            >
-              <figure>
-                <img src="/images/folder.png" />
-              </figure>
-              <p>Tribe Named Athari</p>
-            </div>
-
-            <h5>Projects</h5>
-
-            <div
-              class="start-folder-wrap file-folder"
-              data-website-link="https://emmanuelojiji.github.io/beatsuk/"
-            >
-              <figure>
-                <img src="/images/folder.png" />
-              </figure>
-              <p>Beats</p>
-            </div>
-
-            <div
-              class="start-folder-wrap file-folder"
-              data-website-link="https://emmanuelojiji.github.io/creps2africa/"
-            >
-              <figure>
-                <img src="/images/folder.png" />
-              </figure>
-              <p>Creps 2 Africa</p>
-            </div>
-
-            <div
-              class="start-folder-wrap file-folder"
-              data-website-link="https://emmanuelojiji.github.io/govuk/"
-            >
-              <figure>
-                <img src="/images/folder.png" />
-              </figure>
-              <p>GOV UK</p>
-            </div>
-
-            <div
-              class="start-folder-wrap file-folder"
-              data-website-link="https://emmanuelojiji.github.io/nike/"
-            >
-              <figure>
-                <img src="/images/folder.png" />
-              </figure>
-              <p>Nike</p>
-            </div>
-
-            <div
-              class="start-folder-wrap file-folder"
-              data-website-link="https://emmanuelojiji.github.io/nosignal/"
-            >
-              <figure>
-                <img src="/images/folder.png" />
-              </figure>
-              <p>No Signal</p>
-            </div>
-
-            <div
-              class="start-folder-wrap file-folder"
-              data-website-link="https://emmanuelojiji.github.io/oddstudio/"
-            >
-              <figure>
-                <img src="/images/folder.png" />
-              </figure>
-              <p>ODD Studio</p>
-            </div>
-
-            <div
-              class="start-folder-wrap file-folder"
-              data-website-link="https://emmanuelojiji.github.io/sppotifystudy/"
-            >
-              <figure>
-                <img src="/images/folder.png" />
-              </figure>
-              <p>Spotify Study</p>
-            </div>
-
-            <div
-              class="start-folder-wrap file-folder"
-              data-website-link="https://emmanuelojiji.github.io/tribenamedathari/"
-            >
-              <figure>
-                <img src="/images/folder.png" />
-              </figure>
-              <p>Tribe Named Athari</p>
-            </div>
-
-            <h5>Files</h5>
-
-            <div class="start-folder-wrap file-folder">
-              <figure>
-                <img src="/images/notepad.png" />
-              </figure>
-              <p>About Me</p>
-            </div>
-
-            <div
-              class="start-folder-wrap file-folder"
-              data-website-link="/cv.pdf/"
-            >
-              <figure>
-                <img src="/images/word.png" />
-              </figure>
-              <p>My CV</p>
-            </div>
-          </div>
-
-          <!--<div class="coming-soon">
-            <h5>Coming soon</h5>
-
-            <div class="square"></div>
-          </div>-->
-        </aside>
-
-        <div class="browser">
-          <header>
-            <p class="close">close</p>
-            <img src="/images/chrome.png" />
-          </header>
-
-          <iframe title="W3Schools Free Online Web Tutorials" class="iframe">
-          </iframe>
+    <section class="billboard">
+        <div class="billboard-wrap page-container">
+            <h1>Front End Developer with a passion for creativity. Welcome to my world of ideas.</h1>
         </div>
-      </main>
+    </section>
 
-      <div class="taskbar">
-        <figure class="windows-icon-wrap icon-wrap">
-          <img src="images/windows-logo.svg" class="windows-icon" />
-        </figure>
 
-        <div class="search-wrap">
-          <input type="text" placeholder="Type here to search" /><img
-            src="/images/search.png"
-          />
+
+    <section class="explore" id="explore">
+        <div class="explore-wrap page-container">
+            <h3>Projects</h3>
+
+            <a href="https://quizzical-hodgkin-224185.netlify.app/">BetterDays App [Currently In Development] [Original Idea]</a>
+            <a href="https://emmanuelojiji.github.io/giphynollywood">GIPHY Nollywood App [Concept]</a>
+            <a href="https://emmanuelojiji.github.io/nandos">Nando's Cocktails Landing Page [Concept]</a>
+            <a href="https://emmanuelojiji.github.io/nosignalradio/">There's No Signal Radio [Concept] </a>
+            <a href="https://emmanuelojiji.github.io/govuk/">GOV UK COVID-19 Help Page [Concept]</a>
+            <a href="http://emmanuelojiji.com/">My Windows 10 Style Portfolio [Archives]</a>
+
         </div>
+    </section>
 
-        <a href="mailto:someone@yoursite.com?subject=New Enquiry">
-          <figure class="mail-icon-wrap icon-wrap">
-            <img src="images/mail.png" class="taskbar-icon" />
-          </figure>
-        </a>
+    <footer>
+        <div class="footer-wrap page-container">
+            <span>Emmanuel Ojiji 2021</span>
+        </div>
+    </footer>
 
-        <a href="https://github.com/emmanuelojiji/" target="_blank">
-          <figure class="mail-icon-wrap icon-wrap">
-            <img src="images/github.png" class="taskbar-icon" />
-          </figure>
-        </a>
+</body>
 
-        <a href="https://www.linkedin.com/in/emmanuelojiji/" target="_blank">
-          <figure class="linkedin-icon-wrap icon-wrap">
-            <img src="images/linkedin.png" class="taskbar-icon" />
-          </figure>
-        </a>
-
-        <a class="chrome">
-          <figure class="linkedin-icon-wrap icon-wrap">
-            <img src="images/chrome.png" class="taskbar-icon" />
-          </figure>
-        </a>
-      </div>
-    </div>
-  </body>
 </html>
